[package]
name = "reverse_tag_lookup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
